src/css/global.css
@font-face {
  font-family: 'BigJohn';
  src: url('../fonts/BIGJOHN.otf') format('opentype');
}
@font-face {
  font-family: 'SlimJoe';
  src: url('../fonts/SlimJoe.otf') format('opentype');
}

h1, h2, h3 {
  font-family: "BigJohn", sans-serif;
}

h1{
  font-size: 20pt;
}
h2 {
  font-size: 16pt;
}
h3{
  font-size: 13pt;
}

body {
  font-family: "SlimJoe", sans-serif;
  font-size: 10pt;
  background-color: black;
  color: white;
}

button {
  font-family: "BigJohn", sans-serif;
  font-size: 12pt;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 20px;
  padding-right: 20px;

  border-radius: 10px;
  background-color: black;
  border: 2px dotted white;
  color: white;
  transition: border 0.2s ease-in-out;
}
button:hover {
  border: 2px solid white;
}
.thinButton{
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 20px;
  padding-right: 20px;
  font-family: "SlimJoe", sans-serif;
}
.squareButton{
  padding: 5px;
  font-family: "SlimJoe", sans-serif;
  text-align: center;
}
.flexList button {
  width: 100%;
  display: block;
  margin-bottom: 10px;
}

summary {
  margin: 2px;
  list-style: none; /* remove the default list-style */

  font-family: "SlimJoe", sans-serif;
  font-size: 13pt;

  border-radius: 10px;
  background-color: black;
  border: 2px dotted white;
  color: white;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 20px;
  padding-right: 20px;

  transition: border-color 0.2s ease-in-out;
}
summary:hover {
  border: 2px solid white;
}
summary::marker {
  content: ""; /* hide the marker */
}
details[open] summary {
  color: yellow;
  font-family: "BigJohn", sans-serif;
  font-size: 14pt;
}
.noSelect{
  user-select: none;
}

.alignLeft{
  justify-content: start;
  align-items: center;
}

.alignRight {
  justify-content: flex-end;
  align-items: center;
}

.textAlignLeft{
  text-align: left;
}
.textAlignCenter{
  text-align: center;
}

.marginAuto{
  margin:auto;
}
.paddingTopBottom0{
  padding-top: 0px;
  padding-bottom: 0px;
}
.marginBottom5 {
  margin-bottom: 5px;
}


.marginLeft20{
  margin-left: 20px; /* add margin to the right of the heading */
}
.marginLeft10{
  margin-left: 10px; /* add margin to the right of the heading */
}
.marginLeft20Percent{
  margin-left: 20%;
}
.marginRight20Percent{
  margin-right: 20%;
}
.marginRight40Percent{
  margin-right: 40%;
}
.fullWidth{
  width: 100%;
}
.width60{
  width: 60%;
}
.width50{
  width: 50%;
}
.width40{
  width: 40%;
}
.width20{
  width: 20%;
}
.width10{
  width: 10%;
}

.heigt50{
  height: 50%;
}

.channelGroup {
  border-radius: 10px;
  background-color: rgba(0, 0, 0, 0.2);
  /* border: 1px solid white; */
  /* padding: 1px; */
  width: 99%;
  height: 85%;
  grid-gap: 5px;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(1, 1fr);
  margin-left: auto;
  margin-right: auto;
  /* box-sizing: border-box; */
  display: grid;
}
.channelContainer {
  overflow: auto;
  padding: 20px;
  border-radius: 10px;
  height: 100%;
  border: 1px solid white;
}


.flexContainer{
  display: flex;
  padding-top: 1px;
  padding-bottom: 1px;
  justify-content: space-between;
  align-items: center;
}
.alignFlexStart{
  align-items: flex-start;
}
.alignFlexEnd{
  align-items: flex-end;
}

.flexList{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.numberInput {
  appearance: textfield;
  
  text-align: center;
  /* align-items: end; */
  padding: 10px;
  padding-top: 3px;
  padding-bottom: 3px;

  outline: 2px dotted;
  border: none;
  background-color: black;
  color: white;
  border-radius: 10px;
  box-sizing: border-box;
  height: 30px;
  width: 45px;
  transition: color 0.2s ease-in-out;
}
.numberInput:focus {
  outline: 2px solid;
  color: yellow;
  /* border-color: #4da6ff; */
}
.numberInput:hover{
  outline: 2px solid;
}
.numberInput::-webkit-inner-spin-button,
.numberInput::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
  display: none;
}

.textInput {
  text-align: center;
  padding: 10px;
  padding-top: 3px;
  padding-bottom: 3px;

  outline: 2px dotted;
  border: none;
  background-color: black;
  color: white;
  border-radius: 10px;
  box-sizing: border-box;
  height: 30px;
  transition: color 0.2s ease-in-out;
}
.textInput:focus {
  outline: 2px solid;
  color: yellow;
  /* border-color: #4da6ff; */
}
.textInput:hover{
  outline: 2px solid;
}

.sliderInput{
  -webkit-appearance: none;
  appearance: none;
  width: 15vh;
  height: 10px;
  background: gray;
  outline: none;
  opacity: 0.6;
  transition: opacity 0.1s;
  border-radius: 10px;
}
.sliderInput:hover {
  opacity: 1;
}

.toggleInput{
  appearance: none;
  border-radius: 10px;
  background-color: black;
  border: 1px solid white;
  /* vertical-align: middle; */
  float: left; /* align to left */
  width: 15vh;
  height: 25px;
}
.toggleInput:hover{
  background-color: rgba(100, 100, 100, 0.4);
}
.toggleInput:checked:hover {
  background-color: rgba(100, 100, 100, 0.8);
}
.toggleInput:checked {
  content: "";
  background-color: white;
  border-radius: 10px;
  width: 15vh;
  height: 25px;
  /* position: absolute; */
}

#openSettingsBtn {
  font-family: "BigJohn", sans-serif;
  font-size: 16pt;
  position: fixed;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 60px;
  padding-right: 60px;
  top: 50px;
  left: 50px;
  display: none;
}
#buttonSettingsGroup {
  user-select: none;
  align-items: center;
  height: 5%;
  display: flex;
}
#settingsPanel {
  position: fixed;
  top: 50px;
  left: 50px;
  width: 50%;
  height: 85%;
  border-radius: 10px;
  background-color: rgba(0, 0, 0, 0);
  border: 1px solid white;
  padding: 20px;

  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(1, 1fr);
  grid-gap: 10px;
  display: none;
}
#toyCanvas {
  width: 100%;
  height: 100%;
  overflow: hidden;    /* add other styles as desired */
}

